--- a/wine-app/src/components/Average/Average.css
+++ b/wine-app/src/components/Average/Average.css
@@ -1,6 +1,75 @@
 .chart-container {
-  max-width: 100%;
-  height: 800px;
-  justify-content: center;
+  max-width: 900px;
+  margin: 2rem auto;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.controls {
+  max-width: 900px;
+  margin: 1rem auto;
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 2rem;
+  padding: 1rem;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  align-items: flex-start;
+}
+
+.country-filter,
+.sort-filter {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.95rem;
+  color: #333;
+  min-width: 280px;
+  flex: 1;
+}
+
+.sort-filter select {
+    margin: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: #f7f7f6;
+    font-size: large;
+}
+
+
+.select-buttons {
+  margin-bottom: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+
+.select-buttons button {
+  padding: 0.4rem 0.7rem;
+  border: none;
+  border-radius: 4px;
+  background-color: #a26143;
+  color: white;
+  cursor: pointer;
+  font-size: 0.85rem;
+  transition: background-color 0.2s ease;
+}
+
+.select-buttons button:hover {
+  background-color: #8c6b1d;
+}
+
+/* Ensure select box is consistent */
+.country-select {
+  min-width: 250px;
+  max-width: 100%;
+}
+
+label {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 1rem;
+    font-size: 1.2rem;
+    color: #333;
 }
