--- a/wine-app/src/components/Home/Home.css
+++ b/wine-app/src/components/Home/Home.css
@@ -14,6 +14,7 @@ body {
   font-weight: bold;
   background: linear-gradient(90deg, #ff4e50, #f9d423);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: fadeIn 1s ease-in;
 }
