Style price fix

--- a/wine-app/src/components/Price/Price.css
+++ b/wine-app/src/components/Price/Price.css
@@ -1,6 +1,6 @@
 .chart-scatter-container {
-    max-width: 1200px;
-    height: 600px;
+    max-width: 70%;
+    
     margin: 2rem auto;
     padding: 1.5rem;
     background-color: #fff;
